Daten werden erfasst

--- a/app/src/main/res/menu/mymenu.xml
+++ b/app/src/main/res/menu/mymenu.xml
@@ -20,5 +20,9 @@
         app:showAsAction="always"
         android:title="Export waypoints" />
 
-
+    <item
+        android:id="@+id/action_deleteWP"
+        android:icon="@drawable/ic_delete_wp"
+        app:showAsAction="always"
+        android:title="Delete waypoints" />
 </menu>
