--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -2,6 +2,6 @@
 
 <paths>
 
-    <files-path name="SaveMyWaypoints" path="bookTrip/"/>
+    <files-path name="ex_Files" path="external_files/"/>
 
 </paths>
