--- a/app/src/main/res/layout/activity_version.xml
+++ b/app/src/main/res/layout/activity_version.xml
@@ -15,9 +15,20 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
+        android:text="@string/title_smwp"
         android:textColor="#33b5e5"
-        android:textSize="50sp"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/fullscreen_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:keepScreenOn="true"
+        android:text="@string/title_version"
+        android:textColor="#33b5e5"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
     <!-- This FrameLayout insets its children based on system windows using
