--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,27 +5,10 @@
     <group
         android:id="@+id/grp1"
         android:visible="true">
-        <item
-            android:id="@+id/action_saveWP"
-            android:icon="@drawable/ic_save_data"
-            android:title="Save waypoint"
-            app:showAsAction="always" />
 
         <item
             android:id="@+id/action_listWP"
-            android:icon="@drawable/ic_list_wps"
-            android:title="List waypoints"
-            app:showAsAction="always" />
-
-        <item
-            android:id="@+id/action_exportWP"
-            android:icon="@drawable/ic_export_wps"
-            android:title="Export waypoints"
-            app:showAsAction="always" />
-
-        <item
-            android:id="@+id/action_markWP"
-            android:title="Mark waypoints" />
+            android:title="List waypoints"/>
 
         <item
             android:id="@+id/action_deleteWP"
