--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,39 +14,42 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="8"
-        tools:context=".MainActivity" >
-    </fragment>
+        android:layout_weight="7"
+        tools:context=".MainActivity"
+        tools:layout="@layout/activity_main"></fragment>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="3"
+        android:background="#216635"
         android:fitsSystemWindows="true">
 
-        <Button
+        <ImageButton
             android:id="@+id/main_bt_saveWP"
-            style="?metaButtonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:text="@string/main_bt_saveWP" />
+            style="@android:style/Widget.Holo.ImageButton"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:gravity="start"
+            app:srcCompat="@drawable/ic_save_data" />
 
-        <Button
+        <ImageButton
             android:id="@+id/main_bt_markWP"
-            style="?metaButtonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/main_bt_saveWP"
-            android:text="@string/main_bt_markWP" />
+            style="@android:style/Widget.Holo.ImageButton"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_toEndOf="@id/main_bt_saveWP"
+            android:contentDescription="TODO"
+            app:srcCompat="@android:drawable/ic_menu_slideshow" />
 
-        <Button
+        <ImageButton
             android:id="@+id/main_bt_shareWP"
-            style="?metaButtonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/main_bt_markWP"
-            android:text="@string/main_bt_shareWP" />
+            style="@android:style/Widget.Holo.ImageButton"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_toEndOf="@id/main_bt_markWP"
+            app:srcCompat="@android:drawable/ic_menu_share" />
 
     </RelativeLayout>
 
