--- a/app/src/main/res/layout/wp_entry.xml
+++ b/app/src/main/res/layout/wp_entry.xml
@@ -19,4 +19,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/wp_button_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Delete" />
+
 </LinearLayout>
