--- a/app/src/main/res/layout/wp_entry.xml
+++ b/app/src/main/res/layout/wp_entry.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:paddingTop="5dp"
     android:paddingBottom="5dp">
 
@@ -12,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
-        android:paddingLeft="5dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="5dp">
 
         <TextView
             android:id="@+id/wp_date"
@@ -47,9 +46,9 @@
         style="@style/Widget.AppCompat.ImageButton"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:padding="5dp"
-        android:layout_marginRight="10dp"
         android:layout_gravity="right"
-        android:background="@drawable/delete" />
+        android:layout_marginRight="10dp"
+        android:background="@drawable/delete"
+        android:padding="5dp" />
 
 </LinearLayout>
